[tool.poetry]
name = "test_bewise"
version = "0.1.0"
description = ""
authors = ["VictoriaS <viccisviri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
jupyter = "^1.0.0"
numpy = "^1.23.2"
natasha = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
